<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<com.google.android.material.imageview.ShapeableImageView
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:scaleType="centerCrop"
    app:shapeAppearanceOverlay="@style/circleImageView"
    android:background="@color/white"
    android:src="@drawable/person"
    android:id="@+id/user_profile"
    android:adjustViewBounds="true"
    android:layout_width="40dp"
    android:layout_height="40dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/more"
        android:src="@drawable/component_10___1"
        app:layout_constraintBottom_toBottomOf="@id/user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/user_name"
        android:text="@string/rupi_kaur"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/user_profile"
        app:layout_constraintTop_toTopOf="@id/user_profile"
        app:layout_constraintBottom_toBottomOf="@id/user_profile"
        android:textSize="12sp"
        android:layout_height="wrap_content"/>
    <androidx.viewpager2.widget.ViewPager2
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:id="@+id/user_posts"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile"
        android:layout_height="240dp"/>



    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/like"
        android:id="@+id/like"
        android:scaleType="fitCenter"
        android:contentDescription="@string/like"
        app:layout_constraintBottom_toBottomOf="@id/user_posts"
        app:layout_constraintStart_toStartOf="@id/user_posts"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/comment__1_"
        android:contentDescription="@string/comment"
        android:id="@+id/comments"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        android:src="@drawable/outline"
        android:id="@+id/share"
        android:scaleType="fitCenter"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/share"
        app:layout_constraintTop_toTopOf="@id/comments"
        app:layout_constraintBottom_toBottomOf="@id/comments"
        app:layout_constraintStart_toEndOf="@id/comments"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/person"
        android:scaleType="centerCrop"
        android:layout_marginTop="4dp"

        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/user_likes_1"
        app:layout_constraintTop_toBottomOf="@id/user_posts"
        android:layout_width="20dp"
        android:layout_height="20dp"/>
    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/person"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/user_likes_1"
        app:layout_constraintStart_toStartOf="@id/user_likes_1"
        app:layout_constraintBottom_toBottomOf="@id/user_likes_1"
        android:id="@+id/user_likes_2"
        android:layout_marginStart="10dp"
        android:layout_width="20dp"
        android:layout_height="20dp"/>
    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/person"
        android:scaleType="centerCrop"
        android:layout_width="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/user_likes_2"
        app:layout_constraintBottom_toBottomOf="@id/user_likes_2"
        android:id="@+id/user_likes_3"
        app:layout_constraintStart_toStartOf="@id/user_likes_2"
        android:layout_height="20dp"/>
    <TextView
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:text="@string/_5_likes"
        android:id="@+id/likes_Count"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/user_likes_3"
        app:layout_constraintStart_toEndOf="@id/user_likes_3"
        app:layout_constraintBottom_toBottomOf="@id/user_likes_3"
        android:layout_height="wrap_content"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="20dp"
        android:layout_marginTop="4dp"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:src="@drawable/person"
        android:scaleType="centerCrop"
        android:id="@+id/user_profile_1"
        app:layout_constraintStart_toStartOf="@id/user_likes_1"
        app:layout_constraintTop_toBottomOf="@id/user_likes_1"
        android:layout_height="20dp"/>
    <TextView
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:text="@string/rupi_kaul"
        android:textStyle="bold"
        android:id="@+id/user_name_1"
        android:gravity="center"
        android:textSize="11sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/user_profile_1"
        app:layout_constraintBottom_toBottomOf="@id/user_profile_1"
        app:layout_constraintStart_toEndOf="@id/user_profile_1"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/description"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:maxLines="2"
        android:textSize="11sp"
        android:text="@string/description"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/user_name_1"
        app:layout_constraintTop_toTopOf="@id/user_name_1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>